k8s/workloads/bytestash/manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bytestash
  labels:
    app: bytestash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bytestash
  template:
    metadata:
      labels:
        app: bytestash
    spec:
      nodeSelector:
        platform.io/pi: pi-2
      containers:
        - name: bytestash
          image: ghcr.io/jordan-dalby/bytestash:latest
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: data
              mountPath: /data/snippets
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
---
apiVersion: v1
kind: Service
metadata:
  name: bytestash
spec:
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: bytestash
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bytestash

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bytestash.rvserver.online`)
      kind: Rule
      services:
        - name: bytestash
          port: 80
